css/style3.css
body {
    box-sizing: border-box;
}

hr {
    color: darkgray;
}

/* Navbar */

header {
    display: flex;
}

header h1 {
    text-align: center;
}

a {
    text-decoration: none;
    color: darkslategray;
    display: flex;
    justify-content: center;
}

header ul {
    display: flex;
    flex-grow: 1;
    justify-content: center;
    text-align: center;
}


header li {
    padding: 1em;
    list-style-type: none;
}


/* Slider Section */

.slider_section {
    text-align: center;
    margin-top: 6em;
}

.slider_section img {
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;
    width: 6em;
    height: 6em;
}

.slider {
    width: 95%;
    margin: 2em auto;
    height: 15em;
    border: solid darkgray 2px;
}

.slider img {
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
}

.slider_bottom_boxes_container {
    display: grid;
    grid-gap: 1rem;
    grid-template-areas:
    "box-1 box-2 box-3";
    margin: auto;
}

.bottom_box {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: .8em auto;
    padding: .5em;
    width: 30%;
    height: 30%;
}

.bottom_box h5 {
    margin-top: 0px;
}

.box-1 {
    grid-area: "box-1";
}

.box-2 {
    grid-area: "box-2";
}

.box-3 {
    grid-area: "box-3";
}




/* Canvas & Prints Section */


.canvases_and_prints_section {
    text-align: center;
    margin: 6em auto;
}

.img_box {
    display: grid;
    grid-gap: 15px;
    padding: 1rem;
    grid-template-areas:
    "one two"
    "three four";
}

.img_box img {
    max-width: 100%;
    object-fit: contain;
    vertical-align: center;
}

.img_1 {
    grid-area: one;
}

.img_2 {
    grid-area: two;
}

.img_3 {
    grid-area: three;
}

.img_4 {
    grid-area: four;
}

/* Photography Section */

.photography_section {
    margin: 6em auto;
}

.photography_section > h2, 
.photography_section > p {
    text-align: right;
}


.photo_gallery img {
    max-width: 100%;
    object-fit: contain;
    vertical-align: center;
}

.photo_gallery {
    display: grid;
    grid-gap: 5px;
    grid-template-areas:
    "left left-mid-top left-mid-bottom"
    "right-mid-top right-mid-bottom right";
}

.gallery_img_1 {
    grid-area: "left";
}

.gallery_img_2 {
    grid-area: "left-mid-top";
}

.gallery_img_3 {
    grid-area: "left-mid-bottom";
}

.gallery_img_4 {
    grid-area: "right-mid-top";
}

.gallery_img_5 {
    grid-area: "right-mid-bottom";
}

.gallery_img_6 {
    grid-area: "right";
}


/* Canvas Art Section */

.canvas_art_section {
    margin: 6em auto;
}

.canvas_box {
    width: 100%;
    height: 15em;
    margin: auto;
    border: solid darkgray 1px;
}


/* Adventure Kits Section */

.adventure_kits_section {
    margin: 6em auto;
}

.adventure_kits_image {
    width: 100%;
    height: 15em;
    margin: auto;
    border: solid darkgray 1px;
}

/* Mobile */

@media screen and (max-width: 480px) {
    body, button {
    font-size: 0.8em;
    }
}

